# logkv

./: CMakeLists.txt  README.md  build.sh  test.sh
include/logkv/: autoser.h  bytes.h  crc.h  hex.h  object.h  serializer.h  store.h
include/logkv/autoser/: asio.h  associative.h  bytes.h  partial.h  pfr.h  pushback.h
include/logkv/crc/: crc16.h  crc16table.inc
tests/: autoser.cpp  autoser.sh  benchmark.cpp  benchmark.sh  benchmark_debug.sh  clean.sh  forktest.cpp  forktest.sh  forktest2.cpp  forktest2.sh  hello.cpp  hello.sh  mode.cpp  mode.sh  runtest.sh  testautoser.cpp  testautoser.sh  testbytes.cpp  testbytes.sh  testcrc.cpp  testcrc.sh  teststore.cpp  teststore.sh  teststore_nosanitizer.sh
